--- a/html/index.html
+++ b/html/index.html
@@ -153,6 +153,7 @@
                                     <li><a href="landing-role.html">role landing</a></li>
                                     <li><a href="article.html">article</a></li>
                                     <li><a href="combo-article.html">combo-article</a></li>
+                                    <li><a href="search.html">search</a></li>
                                     <li><a href="help-and-support.html">help-and-support</a></li>
                                 </ul>
                             </div>
