--- a/html/search-no-keyword.html
+++ b/html/search-no-keyword.html
@@ -137,7 +137,7 @@
     </script>
 </head>
 
-<body class="html not-front logged-in no-sidebars page-search page-search-node page-search-node-sdfs-sdf-sdf-sd-f landing search-landing">
+<body class="html not-front logged-in no-sidebars page-search page-search-node landing search-landing">
     <div id="skip-link">
         <a href="#main-content" class="element-invisible element-focusable">Skip to main content</a>
     </div>
@@ -161,19 +161,19 @@
                 <div class="region region-navigation">
                     <section id="block-menu-menu-logout" class="block block-menu clearfix">
                         <ul class="menu nav">
-                            <li class="first last leaf"><a href="/user/logout?current=search/node/sdfs%20sdf%20sdf%20sd%20f" title="">Logout</a></li>
+                            <li class="first last leaf"><a href="/user/logout?current=search/node" title="">Logout</a></li>
                         </ul>
                     </section>
                     <!-- /.block -->
                     <section id="block-search-form" class="block block-search top-search clearfix">
-                        <form class="form-search content-search" action="/search/node/sdfs%20sdf%20sdf%20sd%20f" method="post" id="search-block-form" accept-charset="UTF-8">
+                        <form class="form-search content-search" action="/search/node/" method="post" id="search-block-form" accept-charset="UTF-8">
                             <div>
                                 <div>
                                     <h2 class="element-invisible">Search form</h2>
                                     <div class="input-group">
                                         <input title="Enter the terms you wish to search for." placeholder="Search" class="form-control form-text" type="text" id="edit-search-block-form--2" name="search_block_form" value="" size="15" maxlength="128" /><span class="input-group-btn"><button type="submit" class="btn btn-default">Search</button></span></div>
                                     <button class="element-invisible btn btn-primary form-submit" id="edit-submit" name="op" value="Search" type="submit">Search</button>
-                                    <input type="hidden" name="form_build_id" value="form-XZ0IzsgbK9HWZPTJDkWa_BxYtgmJcl853DTSMRwp6Fg" />
+                                    <input type="hidden" name="form_build_id" value="form-q6Q_vE4ZCuLIYPzGkXOfRrAdNeV2QCtl7QFIBMgGg4U" />
                                     <input type="hidden" name="form_token" value="1zvSpYnygTGcx8u0IEIVHvMkCpdKz8QXu4VvO90lytE" />
                                     <input type="hidden" name="form_id" value="search_block_form" />
                                 </div>
@@ -207,7 +207,7 @@
                                                         <div data-type="block" data-block="views--15335beaa85949ef59fd682844e0544d" class="tb-megamenu-block tb-block tb-megamenu-block">
                                                             <div class="block-inner">
                                                                 <section id="block-views-15335beaa85949ef59fd682844e0544d" class="block block-views clearfix">
-                                                                    <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_5 view-dom-id-ef24b8fa60ccc2a5198acd545a172c5a">
+                                                                    <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_5 view-dom-id-85ad767545f7a207c754c10f6279fc2a">
                                                                         <div class="view-content">
                                                                             <div class="views-row views-row-1 views-row-odd views-row-first">
                                                                                 <div class="views-field views-field-title-1"> <span class="field-content"><a href="http://playbook.sapient.com/article/your-digital-technologists-are-here-help">Your Digital Technologists are here to help</a></span> </div>
@@ -260,7 +260,7 @@
                                                         <div data-type="block" data-block="views--bff41ba345313f4725abbbc4d6b735af" class="tb-megamenu-block tb-block tb-megamenu-block">
                                                             <div class="block-inner">
                                                                 <section id="block-views-bff41ba345313f4725abbbc4d6b735af" class="block block-views clearfix">
-                                                                    <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_3 view-dom-id-96811a86d875888822ff950086e89335">
+                                                                    <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_3 view-dom-id-15592cf201df304a5f1b008400f02246">
                                                                         <div class="view-content">
                                                                             <div class="views-row views-row-1 views-row-odd views-row-first">
                                                                                 <div class="views-field views-field-title-1"> <span class="field-content"><a href="http://playbook.sapient.com/article/working-brand-managers">Working with Brand Managers</a></span> </div>
@@ -310,7 +310,7 @@
                                                         <div data-type="block" data-block="views--913048248ec8064ad32804e932da9e4f" class="tb-megamenu-block tb-block tb-megamenu-block">
                                                             <div class="block-inner">
                                                                 <section id="block-views-913048248ec8064ad32804e932da9e4f" class="block block-views clearfix">
-                                                                    <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_2 view-dom-id-6d99faef648cd3e622fdeea77e7db30d">
+                                                                    <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_2 view-dom-id-a9ac9dd031ece16bb690c3fc48f2701f">
                                                                         <div class="view-content">
                                                                             <div class="views-row views-row-1 views-row-odd views-row-first">
                                                                                 <div class="views-field views-field-title-1"> <span class="field-content"><a href="http://playbook.sapient.com/article/working-brand-managers">Working with Brand Managers</a></span> </div>
@@ -354,6 +354,9 @@
         </header>
         <!-- /#page-header -->
         <a id="main-content"></a>
+        <div class="alert alert-block alert-danger">
+            <a class="close" data-dismiss="alert" href="#">&times;</a>
+            <h4 class="element-invisible">Error message</h4> Please enter some keywords.</div>
         <div class="region region-content">
             <section id="block-system-main" class="block block-system clearfix">
                 <div class="row two-col-custom-content-wrapper">
@@ -384,19 +387,7 @@
                         </div>
                     </div>
                     <div class="col-sm-7 two-col-custom-right">
-                        <div class="inside">
-                            <div class="panel-pane pane-search-result">
-                                <h2 class="pane-title">
-      Your search yielded no results    </h2>
-                                <div class="pane-content">
-                                    <ul>
-                                        <li>Check if your spelling is correct.</li>
-                                        <li>Remove quotes around phrases to search for each word individually. <em>bike shed</em> will often show more results than <em>&quot;bike shed&quot;</em>.</li>
-                                        <li>Consider loosening your query with <em>OR</em>. <em>bike OR shed</em> will often show more results than <em>bike shed</em>.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="inside"></div>
                     </div>
                 </div>
             </section>
@@ -412,7 +403,7 @@
                             <h2 class="pane-title">
       Brand Managers    </h2>
                             <div class="pane-content">
-                                <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_5 view-dom-id-6c489d9115e981bfbb6ed4a59c424354">
+                                <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_5 view-dom-id-750df7d194ee7d181bfb7a48c1a35e42">
                                     <div class="view-content">
                                         <div class="views-row views-row-1 views-row-odd views-row-first">
                                             <div class="views-field views-field-title-1"> <span class="field-content"><a href="http://playbook.sapient.com/article/your-digital-technologists-are-here-help">Your Digital Technologists are here to help</a></span> </div>
@@ -451,7 +442,7 @@
                             <h2 class="pane-title">
       Agencies    </h2>
                             <div class="pane-content">
-                                <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_3 view-dom-id-e86babe7156da0ae502f96b4994eb2c4">
+                                <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_3 view-dom-id-44bede7ab2c4b5990e22ef1cf8dd8f5d">
                                     <div class="view-content">
                                         <div class="views-row views-row-1 views-row-odd views-row-first">
                                             <div class="views-field views-field-title-1"> <span class="field-content"><a href="http://playbook.sapient.com/article/working-brand-managers">Working with Brand Managers</a></span> </div>
@@ -487,7 +478,7 @@
                             <h2 class="pane-title">
       Digital Technologists    </h2>
                             <div class="pane-content">
-                                <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_2 view-dom-id-9a083dd2cfad58b898406fee7a723365">
+                                <div class="view view-role-page-combo-articles view-id-role_page_combo_articles view-display-id-block_2 view-dom-id-36b6aa167e2fc0c7756d5c033dbc0625">
                                     <div class="view-content">
                                         <div class="views-row views-row-1 views-row-odd views-row-first">
                                             <div class="views-field views-field-title-1"> <span class="field-content"><a href="http://playbook.sapient.com/article/working-brand-managers">Working with Brand Managers</a></span> </div>
