--- a/html/index.html
+++ b/html/index.html
@@ -151,7 +151,7 @@
                                     <li><a href="login-error.html">login-error</a></li>
                                     <li><a href="password-reset.html">password reset</a></li>
                                     <li><a href="password-reset-error.html">password reset error</a></li>
-                                    <li><a href="password-reset-success.html">password reset error</a></li>
+                                    <li><a href="password-reset-success.html">password reset success</a></li>
                                 </ul>
                                 <ul>
                                     <li><a href="home.html">home</a></li>
