--- a/html/home.html
+++ b/html/home.html
@@ -505,6 +505,7 @@
     </div>
     </section>
     </div>
+    <div class="push"></div>
     </div>
     <footer class="footer container">
         <div class="region region-footer">
