--- a/html/index.html
+++ b/html/index.html
@@ -159,6 +159,7 @@
                                     <li><a href="article.html">article</a></li>
                                     <li><a href="combo-article.html">combo-article</a></li>
                                     <li><a href="combo-article2.html">combo-article2</a></li>
+                                    <li><a href="combo-article3-new.html">combo-article3-new</a></li>
                                 </ul>
                                 <ul>
                                     <li><a href="search-results.html">search-results</a></li>
