--- a/html/index.html
+++ b/html/index.html
@@ -36,77 +36,8 @@
     <script src="http://playbook.sapient.com/misc/drupal.js?nr9zwe"></script>
     <script src="http://playbook.sapient.com/sites/all/modules/jquery_update/replace/ui/ui/minified/jquery.ui.effect.min.js?v=1.10.2"></script>
     <script src="http://playbook.sapient.com/sites/all/modules/back_to_top/js/back_to_top.js?nr9zwe"></script>
-    <script>
-    var $ = jQuery;
-    </script>
-    <script>
-    jQuery.extend(Drupal.settings, {
-        "basePath": "\/",
-        "pathPrefix": "",
-        "ajaxPageState": {
-            "theme": "playbook",
-            "theme_token": "cdOamINqOF2Sx1NgPLeS_o1FThZC4OezMVg87qjeTaw",
-            "js": {
-                "sites\/all\/themes\/bootstrap\/js\/bootstrap.js": 1,
-                "sites\/all\/modules\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js": 1,
-                "misc\/jquery.once.js": 1,
-                "misc\/drupal.js": 1,
-                "sites\/all\/modules\/jquery_update\/replace\/ui\/ui\/minified\/jquery.ui.effect.min.js": 1,
-                "sites\/all\/modules\/back_to_top\/js\/back_to_top.js": 1,
-                "0": 1
-            },
-            "css": {
-                "modules\/system\/system.base.css": 1,
-                "sites\/all\/modules\/date\/date_api\/date.css": 1,
-                "sites\/all\/modules\/date\/date_popup\/themes\/datepicker.1.7.css": 1,
-                "modules\/field\/theme\/field.css": 1,
-                "sites\/all\/modules\/contrib\/views\/css\/views.css": 1,
-                "sites\/all\/modules\/back_to_top\/css\/back_to_top.css": 1,
-                "sites\/all\/modules\/contrib\/ctools\/css\/ctools.css": 1,
-                "sites\/all\/modules\/panels\/css\/panels.css": 1,
-                "sites\/all\/themes\/playbook\/css\/style.css": 1
-            }
-        },
-        "back_to_top": {
-            "back_to_top_button_trigger": "100",
-            "back_to_top_prevent_on_mobile": 0,
-            "back_to_top_prevent_in_admin": 0,
-            "back_to_top_button_type": "image",
-            "back_to_top_button_text": "Back to top",
-            "#attached": {
-                "library": [
-                    ["system", "ui"]
-                ]
-            }
-        },
-        "bootstrap": {
-            "anchorsFix": 0,
-            "anchorsSmoothScrolling": 1,
-            "popoverEnabled": 1,
-            "popoverOptions": {
-                "animation": 1,
-                "html": 0,
-                "placement": "right",
-                "selector": "",
-                "trigger": "click",
-                "title": "",
-                "content": "",
-                "delay": 0,
-                "container": "body"
-            },
-            "tooltipEnabled": 1,
-            "tooltipOptions": {
-                "animation": 1,
-                "html": 0,
-                "placement": "auto left",
-                "selector": "",
-                "trigger": "hover focus",
-                "delay": 0,
-                "container": "body"
-            }
-        }
-    });
-    </script>
+ 
+    
 </head>
 
 <body class="html not-front not-logged-in no-sidebars page-welcome">
@@ -157,6 +88,7 @@
                                     <li><a href="home.html">home</a></li>
                                     <li><a href="landing-role.html">role landing</a></li>
                                     <li><a href="article.html">article</a></li>
+                                    <li><a href="article2.html">article2</a></li>
                                     <li><a href="combo-article.html">combo-article</a></li>
                                     <li><a href="combo-article2.html">combo-article2</a></li>
                                     <li><a href="combo-article3-new.html">combo-article3-new</a></li>
