updated for fonts

--- a/html/index.html
+++ b/html/index.html
@@ -87,11 +87,14 @@
                                 <ul>
                                     <li><a href="home.html">home</a></li>
                                     <li><a href="landing-role.html">role landing</a></li>
+                                    <li><a href="landing-role2.html">role landing2</a></li>
                                     <li><a href="article.html">article</a></li>
                                     <li><a href="article2.html">article2</a></li>
+                                    <li><a href="article2.html">article3</a></li>
+                                    <li><a href="article2.html">article4</a></li>
                                     <li><a href="combo-article.html">combo-article</a></li>
                                     <li><a href="combo-article2.html">combo-article2</a></li>
-                                    <li><a href="combo-article3-new.html">combo-article3-new</a></li>
+                                    <li><a href="combo-article3-new.html">combo-article3</a></li>
                                 </ul>
                                 <ul>
                                     <li><a href="search-results.html">search-results</a></li>
